adding historietas, technical diagram process, fix errors

--- a/index.html
+++ b/index.html
@@ -277,16 +277,16 @@
         <section id="polvo-limon" class="section">
             <h2>Polvo de Limón</h2>
             <img width="312px" src="assets/AI/class-room-citrus.png" alt="Class Room Citrus">
-            <h3>Documentos Técnicos</h3>
+            <h3>Documentos Técnico pedagógicos</h3>
             <ul>
-                <li><a href="assets/docs/especificaciones_polvo_limon.pdf" target="_blank">Especificaciones técnicas</a></li>
+                <li><a href="assets/docs/taller.pdf" target="_blank">Taller diseño experimental</a></li>
             </ul>
             <h3>Diagramas de Proceso</h3>
             <div class="gallery">
-                <img width="312px" src="assets/AI/powder-process.png" alt="Powder Process">
+                <img width="312px" src="assets/_diagram.png" alt="Powder Process">
             </div>
             <h3>Limonifico logo (Art design)</h3>
-            <p>Logos enviados por los estudiantes de grado 11.</p>
+            <p>Logos elaborados por los estudiantes de grado 11.</p>
             <div class="gallery">
                 <img src="assets/limonifico/oviedo.png" alt="Dallana">
                 <img src="assets/limonifico/ortegon.jpeg" alt="Mauricio">
@@ -296,12 +296,62 @@
                 <img src="assets/limonifico/brimmy.jpeg" alt="Briñez">
                 <img src="assets/limonifico/edna.jpeg" alt="Rocio">
                 <img src="assets/limonifico/julian.jpeg" alt="Barrero">
-                <img src="assets/limonifico/kevin.jpeg" alt="Cruz">
+                <img src="assets/limonifico/kevin.jpg" alt="Cruz">
                 <img src="assets/limonifico/nataly.jpeg" alt="Prada">
                 <img src="assets/limonifico/ovidio.jpeg" alt="Gutierrez">
                 <img src="assets/limonifico/samuel.jpeg" alt="Tafur">
                 <img src="assets/limonifico/sandy.jpeg" alt="Pulecio">
                 <img src="assets/limonifico/sofia.jpeg" alt="Guzman">
+            </div>
+        </section>
+
+        <section id="historietas" class="section">
+            <h2>Historietas</h2>
+            <div class="historietas-container">
+                <p>Historietas elaboradas por los estudiantes de grado 10.</p>
+                <div class="historieta">
+                    <h3>Juan Diego Ramírez y Eric Mata</h3>
+                    <div class="gallery" id="gallery1">
+                        <img src="assets/historietas/JD1.jpeg" alt="Juan Diego">
+                        <img src="assets/historietas/JD2.jpeg" alt="Juan Diego">
+                        <img src="assets/historietas/JD3.jpeg" alt="Juan Diego">
+                        <img src="assets/historietas/JD4.jpeg" alt="Juan Diego">
+                        <img src="assets/historietas/JD5.jpeg" alt="Juan Diego">
+                        <img src="assets/historietas/JD6.jpeg" alt="Juan Diego">
+                    </div>
+                </div>
+                <div class="historieta">
+                    <h3>Valeria Prada Gualtero</h3>
+                    <div class="gallery" id="gallery2">
+                        <img src="assets/historietas/V1.jpeg" alt="Valeria">
+                    </div>
+                </div>
+                <div class="historieta">
+                    <h3>Zharick Pineda, Alejandro Cruz y Yuliana Briñez</h3>
+                    <div class="gallery" id="gallery3">
+                        <img src="assets/historietas/P1.jpeg" alt="Pineda y Yuliana">
+                    </div>
+                </div>
+                <div class="historieta">
+                    <h3>Sharick Xiomara Villanueva Tafur</h3>
+                    <div class="gallery" id="gallery5">
+                        <img src="assets/historietas/S1.jpeg" alt="Xiomara">
+                        <img src="assets/historietas/S2.jpeg" alt="Xiomara">
+                        <img src="assets/historietas/S3.jpeg" alt="Xiomara">
+                        <img src="assets/historietas/S4.jpeg" alt="Xiomara">
+                        <img src="assets/historietas/S5.jpeg" alt="Xiomara">
+                        <img src="assets/historietas/S6.jpeg" alt="Xiomara">
+                    </div>
+                </div>
+                <div class="historieta">
+                    <h3>Helen Melisa Cabrera y Juan David Molano</h3>
+                    <div class="gallery" id="gallery6">
+                        <img src="assets/historietas/M1.jpeg" alt="Molano y Cabrera">
+                        <img src="assets/historietas/M2.jpeg" alt="Molano y Cabrera">
+                        <img src="assets/historietas/M3.jpeg" alt="Molano y Cabrera">
+                        <img src="assets/historietas/M4.jpeg" alt="Molano y Cabrera">x
+                    </div>
+                </div>
             </div>
         </section>
 
