--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             </ul>
             <h3>Diagramas de Proceso</h3>
             <div class="gallery">
-                <img width="312px" src="assets/_diagram.png" alt="Powder Process">
+                <img width="312px" src="assets/diagram.png" alt="Powder Process">
             </div>
             <h3>Limonifico logo (Art design)</h3>
             <p>Logos elaborados por los estudiantes de grado 11.</p>
@@ -364,7 +364,7 @@
                         <img src="assets/historietas/M1.jpeg" alt="Molano y Cabrera">
                         <img src="assets/historietas/M2.jpeg" alt="Molano y Cabrera">
                         <img src="assets/historietas/M3.jpeg" alt="Molano y Cabrera">
-                        <img src="assets/historietas/M4.jpeg" alt="Molano y Cabrera">x
+                        <img src="assets/historietas/M4.jpeg" alt="Molano y Cabrera">
                     </div>
                 </div>
             </div>
