--- a/index.html
+++ b/index.html
@@ -245,7 +245,11 @@
 
         <section id="antecedentes" class="section">
             <h2>Antecedentes</h2>
-            <img width="312px" src="assets/AI/powder-lab.png" alt="Powder Lab">
+            <img width="312px" src="assets/fotos/mochila.png" alt="Powder Lab">
+            <img width="312px" src="assets/fotos/2.png" alt="Class Room Citrus">
+            <img width="312px" src="assets/fotos/3.png" alt="Powder Lab">
+            <img width="312px" src="assets/fotos/1.png" alt="Powder Lab">
+            
 
             <ul>
                 <li>2021: Inicio del proyecto "Melodías del Limón" con financiamiento de 10 millones de la SEDTOLIMA.</li>
@@ -284,14 +288,18 @@
             <h2>Feria de Emprendimiento 2023</h2>
             <h3>Posters y Stand</h3>
             <div class="gallery">
+                <img width="300px" src="assets/fotos/6.png" alt="Foto 6">
                 <img width="300px" src="assets/poster.png" alt="Poster 1">
                 <img style="width:500px;" src="assets/feria.png" alt="Stand 1">
+                <img style="width:500px;" src="assets/empaque.png" alt="Stand 1">
             </div>
         </section>
 
         <section id="polvo-limon" class="section">
             <h2>Polvo de Limón</h2>
-            <img width="312px" src="assets/AI/class-room-citrus.png" alt="Class Room Citrus">
+            <img width="312px" src="assets/fotos/powder.png" alt="Powder">
+            <img width="312px" src="assets/fotos/5.jpeg" alt="Powder Lab">
+            <img width="312px" src="assets/fotos/4.jpeg" alt="Powder Lab">
             <h3>Documentos Técnico pedagógicos</h3>
             <ul>
                 <li><a href="assets/docs/taller.pdf" target="_blank">Taller diseño experimental</a></li>
